--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
                     <select id="canvas-background">
                       <option selected value="#fff">
                         General
-                      </option>
+                      <!-- </option>
                       <option value="url('../images/blue.jpg') no-repeat">
                         ACE
-                      </option>
+                      </option> -->
                     </select>
                   </div>
                   <div id="hidden-div">
